fix: fixed forced autofocus on mobile

--- a/src/components/components.scss
+++ b/src/components/components.scss
@@ -105,6 +105,10 @@ textarea {
     }
 }
 
+.form__hidden {
+        display: none;
+}
+
 /**
  * ----------------------------------------
  * Entrance index animation
